<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">嘟嘟桌面</string>
    <string name="bg_main_btn_add">添加</string>
    <string name="bg_main_btn_all">全部</string>
    <string name="music_title">音乐</string>
    <string name="music_name">音乐名称</string>
    <string name="music_album">音乐专辑</string>

    <string name="time_title">时间</string>

    <string name="iv_main_dock_icon">首页dock图标</string>
    <string name="iv_plugin_menu">插件菜单</string>
    <string name="iv_plugin_music_cover">音乐封面</string>
    <string name="iv_plugin_music_play">音乐播放</string>
    <string name="iv_plugin_music_pre">音乐上一首</string>
    <string name="iv_plugin_music_next">音乐下一首</string>

    <string name="set_allow">允许</string>
    <string name="set_ban">禁止</string>
    <string name="set_show">显示</string>
    <string name="set_hide">隐藏</string>
    <string name="set_yes">是</string>
    <string name="set_no">否</string>

    <string name="iv_content">图片</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="obd_not_connect">OBD没有连接</string>
    <string name="obd_not_tp">OBD设备不支持胎压</string>

    <string name="driving_cool_black_tp">%1$.1f/%2$d°</string>
    <string name="driving_cool_black_tp_nodata">0.0</string>
    <string name="trip_merge_time_message">OBD两次读取转速不为0的时间间隔 %1$d 分钟,默认为同一行程</string>

    <string name="launcher_tp">%1$s\n%2$.1f\n%3$d℃</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <string name="theme_name">默认</string>
    <string name="theme_item_title_align">center</string>
    <string name="theme_item_music_cover_type">rect</string>

    <string name="theme_item_amap_daohang_line">hide</string>
    <string name="theme_item_amap_xunhang_line">hide</string>
    <string name="theme_item_weather_layout">layout1</string>
    <string name="theme_use_wallpaper">no</string>
    <string name="theme_launcher_layout">layout1</string>

    <string name="theme_amap_btn_layout">layout1</string>
</resources>
