<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:st="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="APP主题"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_plugin_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="主题选择,可以选择使用昼夜主题"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_theme_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="白天主题"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_theme_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="夜间主题"
        st:type="buttonB" />


    <View style="@style/Interval" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="首页标签"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_item_tran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="首页切换动画"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_launcher_item_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:titleEx="首页插件展示顺序(调整后插件会重新加载)"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_launcher_item_sort_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:titleEx="首页插件展示顺序重置"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_launcher_item_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:titleEx="首页插件数量"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="APP设置"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_plugin_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="音乐播放器控制器，可使用APP控制第三方音乐播放器"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_music_inside_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="@string/set_yes"
        st:summary2="@string/set_no"
        st:titleEx="音乐播放器内置封面(内置封面比较准确,搜索封面可能不准确)"
        st:type="switchB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="未选择"
        st:titleEx="控制层实现，如声音控制，一件清理等功能的实现，不同的车机可能处理方式不同。"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_apps_hides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="全部应用将隐藏选中的项目"
        st:titleEx="桌面隐藏项目"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_launcher_show_dock_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:summary="@string/set_show"
        st:summary2="@string/set_hide"
        st:titleEx="展示dock标签"
        st:type="switchB" />

    <View style="@style/Interval" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="时间和天气"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <!--<com.wow.carlauncher.common.view.SetView-->
        <!--android:id="@+id/time_plugin_open_app_select"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--st:titleEx="时间位置点击打开的APP"-->
        <!--st:type="buttonB" />-->

    <!--<View style="@style/Interval" />-->

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/tianqi_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:titleEx="天气定位"
        st:type="buttonB" />

    <View style="@style/Interval" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="开发"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <com.wow.carlauncher.common.view.SetView
        android:id="@+id/sv_key_listener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        st:titleEx="按键测试,可测试方控的按键信息,看看能不能匹配上"
        st:type="buttonB" />

    <View style="@style/Interval" />
</LinearLayout>